tree-sitter-rgbasm/test/corpus/directives.txt
================================================================================
Directives: sections and data
================================================================================

; Simple sections
SECTION "Start", ROM0
SECTION "Data", WRAM0

; Data definitions
DB 1, 2, 3
DW $1234
DS 4

; Constants and RS offsets
DEF CONST_X = 42
RSRESET
RSSET 10

---

(source_file
  (inline_comment)
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type)))
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type))
    (inline_comment)
    (directive
      (simple_directive
        keyword: (directive_keyword)
        (argument_list
          (number_literal)
          (number_literal)
          (number_literal))))
    (directive
      (simple_directive
        keyword: (directive_keyword)
        (argument_list
          (number_literal))))
    (directive
      (ds_directive
        keyword: (directive_keyword)
        size: (number_literal)))
    (inline_comment)
    (directive
      (def_directive
        keyword: (def_keyword)
        name: (variable
          (identifier))
        value: (number_literal)))
    (directive
      (simple_directive
        keyword: (directive_keyword)))
    (directive
      (simple_directive
        keyword: (directive_keyword)
        (argument_list
          (number_literal))))))

================================================================================
Directives: compound assignment operators
================================================================================

; Compound assignments
DEF x = 10
DEF x += 5
DEF x -= 2
DEF x *= 3
DEF x /= 2
DEF x %= 7
DEF x <<= 1
DEF x >>= 2
DEF x &= $0F
DEF x |= $F0
DEF x ^= $FF

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal))))

================================================================================
Directives: EQU vs = (constants vs variables)
================================================================================

; Variables (mutable) - can be redefined with =
DEF count = 0
DEF count = 1
DEF count += 10

; Numeric constants (immutable) - use EQU
DEF SCREEN_WIDTH EQU 160
DEF SCREEN_HEIGHT EQU 144

; String constants - use EQUS
DEF MESSAGE EQUS "Hello, World!"

; Offset constants - use RS group
DEF str_offset RB 4
DEF str_word RW 2

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (inline_comment)
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (equ_keyword)
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (equ_keyword)
      (number_literal)))
  (inline_comment)
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (equs_keyword)
      (string_literal)))
  (inline_comment)
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (r_keyword)
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (r_keyword)
      (number_literal))))

================================================================================
Directives: RL (reserve long)
================================================================================

; Reserve long (4 bytes per item)
RSRESET
DEF struct_ptr RW 1
DEF struct_long RL 2
DEF struct_byte RB 1

---

(source_file
  (inline_comment)
  (directive
    (simple_directive
      (directive_keyword)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (r_keyword)
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (r_keyword)
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (r_keyword)
      (number_literal))))

================================================================================
Directives: STATIC_ASSERT regression
================================================================================

STATIC_ASSERT FATAL, foo == 42

---

(source_file
  (directive
    (assert_directive
      (directive_keyword)
      (severity)
      (binary_expression
        (variable
          (identifier))
        (number_literal)))))

================================================================================
Directives: ASSERT and STATIC_ASSERT
================================================================================

; Assertions without message
ASSERT LOW(MyByte) == 0
STATIC_ASSERT BANK(Function) == 1

; Assertions with message
ASSERT x < 256, "Value too large"
STATIC_ASSERT .end - .start < 100, "Section too big"

; Assertions with severity (comma required after severity level)
ASSERT WARN, x != 0
ASSERT FAIL, y > 0, "Must be positive"
STATIC_ASSERT FATAL, foo == 42

---

(source_file
  (inline_comment)
  (directive
    (assert_directive
      (directive_keyword)
      (binary_expression
        (function_call
          (function_name)
          (variable
            (identifier)))
        (number_literal))))
  (directive
    (assert_directive
      (directive_keyword)
      (binary_expression
        (function_call
          (function_name)
          (variable
            (identifier)))
        (number_literal))))
  (inline_comment)
  (directive
    (assert_directive
      (directive_keyword)
      (binary_expression
        (variable
          (identifier))
        (number_literal))
      (string_literal)))
  (directive
    (assert_directive
      (directive_keyword)
      (binary_expression
        (binary_expression
          (local_symbol
            (identifier))
          (local_symbol
            (identifier)))
        (number_literal))
      (string_literal)))
  (inline_comment)
  (directive
    (assert_directive
      (directive_keyword)
      (severity)
      (binary_expression
        (variable
          (identifier))
        (number_literal))))
  (directive
    (assert_directive
      (directive_keyword)
      (severity)
      (binary_expression
        (variable
          (identifier))
        (number_literal))
      (string_literal)))
  (directive
    (assert_directive
      (directive_keyword)
      (severity)
      (binary_expression
        (variable
          (identifier))
        (number_literal)))))

================================================================================
Directives: PUSHS and SECTION
================================================================================

PUSHS "temp", WRAM0
SECTION "temp", WRAM0
POPS

---

(source_file
  (pushs_block
    (pushs_keyword)
    (string_literal)
    (section_type)
    (section_block
      (section_directive
        (section_keyword)
        (string_literal)
        (section_type)))
    (pops_keyword)))

================================================================================
Directives: stack operations
================================================================================

; Option stack
PUSHO
OPT g.oOX
POPO

; Charmap stack
PUSHC
PUSHC mycharmap
POPC

---

(source_file
  (inline_comment)
  (directive
    (pusho_directive
      (directive_keyword)))
  (directive
    (opt_directive
      (directive_keyword)
      (opt_arg)))
  (directive
    (popo_directive
      (directive_keyword)))
  (inline_comment)
  (directive
    (simple_directive
      (directive_keyword)))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (variable
          (identifier)))))
  (directive
    (simple_directive
      (directive_keyword))))

================================================================================
Directives: INCLUDE, INCBIN, EXPORT
================================================================================

; INCLUDE directive
INCLUDE "utils.inc"
INCLUDE "hardware.inc"

; INCBIN directive - full file
INCBIN "titlepic.bin"

; INCBIN with offset only
INCBIN "data.bin", 78

; INCBIN with offset and length
INCBIN "sprites/hero.bin", 0, 256

; EXPORT directive
EXPORT MyFunc, MyData
EXPORT SingleSymbol
EXPORT #if, #section

---

(source_file
  (inline_comment)
  (directive
    (include_directive
      (include_keyword)
      (argument_list
        (string_literal))))
  (directive
    (include_directive
      (include_keyword)
      (argument_list
        (string_literal))))
  (inline_comment)
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (string_literal))))
  (inline_comment)
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (string_literal)
        (number_literal))))
  (inline_comment)
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (string_literal)
        (number_literal)
        (number_literal))))
  (inline_comment)
  (directive
    (export_directive
      (directive_keyword)
      (argument_list
        (variable
          (identifier))
        (variable
          (identifier)))))
  (directive
    (export_directive
      (directive_keyword)
      (argument_list
        (variable
          (identifier)))))
  (directive
    (export_directive
      (directive_keyword)
      (argument_list
        (variable
          (identifier))
        (variable
          (identifier))))))

================================================================================
Directives: PURGE with raw identifiers
================================================================================

; Define some symbols with keyword names
DEF #if = 1
DEF #section = 2

; PURGE directive with raw identifiers
PURGE #if
PURGE #section, #else

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (number_literal)))
  (inline_comment)
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (variable
          (identifier)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (variable
          (identifier))
        (variable
          (identifier))))))

================================================================================
Directives: SECTION with BANK option
================================================================================

SECTION "Code", ROMX, BANK[7]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type)
      (section_options
        (section_option
          (bank_option
            (bank_option_keyword)
            bank: (number_literal)))))))

================================================================================
Directives: SECTION with ALIGN option
================================================================================

SECTION "OAM Data", WRAM0, ALIGN[8]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type)
      (section_options
        (section_option
          (align_option
            (align_option_keyword)
            align: (number_literal)))))))

================================================================================
Directives: SECTION with ALIGN option and offset
================================================================================

SECTION "Data", ROMX, ALIGN[4, 2]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type)
      (section_options
        (section_option
          (align_option
            (align_option_keyword)
            align: (number_literal)
            offset: (number_literal)))))))

================================================================================
Directives: SECTION with address (ROM0)
================================================================================

SECTION "Fixed", ROM0[$100]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type)
      (section_address
        address: (number_literal)))))

================================================================================
Directives: SECTION with address (ROMX)
================================================================================

SECTION "Data", ROMX[$4000]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type)
      (section_address
        address: (number_literal)))))

================================================================================
Directives: SECTION with address (WRAM0)
================================================================================

SECTION "Variables", WRAM0[$C000]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type)
      (section_address
        address: (number_literal)))))

================================================================================
Directives: SECTION with address (decimal)
================================================================================

SECTION "Test", ROM0[0]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type)
      (section_address
        address: (number_literal)))))

================================================================================
Directives: SECTION with address (expression)
================================================================================

SECTION "Computed", ROM0[$100 * 2]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type)
      (section_address
        address: (binary_expression
          left: (number_literal)
          right: (number_literal))))))

================================================================================
Directives: SECTION with address and BANK option
================================================================================

SECTION "Cool Stuff", ROMX[$4567], BANK[3]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type)
      (section_address
        address: (number_literal))
      (section_options
        (section_option
          (bank_option
            (bank_option_keyword)
            bank: (number_literal)))))))

================================================================================
Directives: SECTION with multiple options
================================================================================

SECTION "VRAM Data", ROMX, BANK[2], ALIGN[4]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type)
      (section_options
        (section_option
          (bank_option
            (bank_option_keyword)
            bank: (number_literal)))
        (section_option
          (align_option
            (align_option_keyword)
            align: (number_literal)))))))

================================================================================
Directives: SECTION with address and multiple options
================================================================================

SECTION "Complex", ROMX[$4000], BANK[5], ALIGN[8, 0]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type)
      (section_address
        address: (number_literal))
      (section_options
        (section_option
          (bank_option
            (bank_option_keyword)
            bank: (number_literal)))
        (section_option
          (align_option
            (align_option_keyword)
            align: (number_literal)
            offset: (number_literal)))))))

================================================================================
Directives: SECTION FRAGMENT
================================================================================

SECTION FRAGMENT "Frag", ROMX, BANK[1], ALIGN[4]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      fragment: (fragment_keyword)
      name: (string_literal)
      (section_type)
      (section_options
        (section_option
          (bank_option
            (bank_option_keyword)
            bank: (number_literal)))
        (section_option
          (align_option
            (align_option_keyword)
            align: (number_literal)))))))

================================================================================
Directives: CHARMAP / NEWCHARMAP / SETCHARMAP
================================================================================

CHARMAP "A", 42
CHARMAP ":)", 39
CHARMAP "<br>", 13, 10
CHARMAP "&euro;", $20ac
CHARMAP 'Z', 90
NEWCHARMAP mymap, main
SETCHARMAP mymap
PUSHC mymap
POPC

---

(source_file
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (string_literal)
        (number_literal))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (string_literal)
        (number_literal))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (string_literal)
        (number_literal)
        (number_literal))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (string_literal)
        (number_literal))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (char_literal)
        (number_literal))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (variable
          (identifier))
        (variable
          (identifier)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (variable
          (identifier)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (variable
          (identifier)))))
  (directive
    (simple_directive
      (directive_keyword))))

================================================================================
Directives: REDEF with EQU (redefine numeric constant)
================================================================================

DEF n\@ EQU 0
REDEF n EQU 1

---

(source_file
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier)
        (uniqueness_affix))
      assign_type: (equ_keyword)
      value: (number_literal)))
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      assign_type: (equ_keyword)
      value: (number_literal))))

================================================================================
Directives: REDEF with EQUS (redefine string constant)
================================================================================

DEF s EQUS "Hello, "
REDEF s EQUS "{s}world!"

---

(source_file
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      assign_type: (equs_keyword)
      value: (string_literal)))
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      assign_type: (equs_keyword)
      value: (string_literal
        (identifier)))))

================================================================================
Directives: REDEF with = (redefine variable)
================================================================================

DEF x = 10
REDEF x = 20

---

(source_file
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      value: (number_literal)))
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      value: (number_literal))))

================================================================================
Directives: REDEF with compound assignment
================================================================================

DEF counter = 0
REDEF counter += 1

---

(source_file
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      value: (number_literal)))
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      value: (number_literal))))

================================================================================
Directives: REDEF in macro (typical use case)
================================================================================

MACRO add_item
    REDEF NUM_ITEMS EQU NUM_ITEMS + 1
    DEF CURRENT_ITEM EQU \1
ENDM ;

---

(source_file
  (directive
    (macro_definition
      keyword: (macro_keyword)
      name: (variable
        (identifier))
      (directive
        (def_directive
          keyword: (def_keyword)
          name: (variable
            (identifier))
          assign_type: (equ_keyword)
          value: (binary_expression
            left: (variable
              (identifier))
            right: (number_literal))))
      (directive
        (def_directive
          keyword: (def_keyword)
          name: (variable
            (identifier))
          assign_type: (equ_keyword)
          value: (macro_argument)))
      end: (directive_keyword)))
  (inline_comment))

================================================================================
Directives: REDEF with RS offset constants
================================================================================

DEF struct_a RB 2
REDEF struct_b RW

---

(source_file
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      assign_type: (r_keyword)
      value: (number_literal)))
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      assign_type: (r_keyword))))

================================================================================
Directives: REDEF with interpolatable identifier
================================================================================

DEF LIST_NAME EQUS "FOO"
REDEF {LIST_NAME} EQUS "["

---

(source_file
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      assign_type: (equs_keyword)
      value: (string_literal)))
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      assign_type: (equs_keyword)
      value: (string_literal))))

================================================================================
Directives: REDEF with expression
================================================================================

DEF MAX_SIZE EQU 256
REDEF MAX_SIZE EQU MAX_SIZE * 2

---

(source_file
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      assign_type: (equ_keyword)
      value: (number_literal)))
  (directive
    (def_directive
      keyword: (def_keyword)
      name: (variable
        (identifier))
      assign_type: (equ_keyword)
      value: (binary_expression
        left: (variable
          (identifier))
        right: (number_literal)))))

================================================================================
Directives: SECTION FRAGMENT
================================================================================

SECTION FRAGMENT "Frag", ROMX, BANK[1], ALIGN[4]

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      fragment: (fragment_keyword)
      name: (string_literal)
      (section_type)
      (section_options
        (section_option
          (bank_option
            (bank_option_keyword)
            bank: (number_literal)))
        (section_option
          (align_option
            (align_option_keyword)
            align: (number_literal)))))))

================================================================================
Directives: Fragment literals
================================================================================

add [[ nop ]]

---

(source_file
  (instruction_list
    (instruction
      (instruction_name)
      (operand_list
        (fragment_literal
          (instruction_list
            (instruction
              (instruction_name))))))))

================================================================================
Directives: Case-insensitivity (RGBASM spec compliance)
================================================================================

; All reserved keywords are case-insensitive (rgbasm.5:101-102)
SECTION "test", ROM0
Section "test2", Rom0
section "test3", rom0

DEF varX EQU 1
Def varY Equ 2
def varz equ 3

MACRO Test
EndM

Macro Test2
endm

; Built-in functions are case-insensitive
DB HIGH(100)
DB high(100)
DB HiGh(100)

---
